# Multifidelity-LCO-Prediction

./: .gitignore  README.md  pyproject.toml
CFD/SU2/Euler/: SU2_naca0020.cfg  config_template.cfg
CFD/SU2/Euler/result_steady/: flow.vtu  history.csv  plot_su.py  surface_flow.csv
docs/: aero_model.md  eigen_analysis.md  isogai_and_michigan_uses.md  michigan_params.md  stages.md  structural_model.md  validation.md
docs/structural_model/: 0_ref.md  1_convention.md  2_parameters.md  3_structural_matrix.md  4_derivations_structural_matrices.md  5_energy.md  6_sanity_check.md
examples/: stage0_free_vibration.py  stage0_frequency_sweep.py  stage1_isogai_eigenvalue_sweep.py  stage1_michigan_eigenvalue_sweep.py  stage1_sanity  stage2_LCO_continuation.py  stage2_LCO_verfication.py  stage2_delta_sweep.py  stage2_michigan_LCO_amplitude.py  stage2_michigan_eigenvalue_sweep.py  stage2_peters_eigenvalue_sweep.py  stage2_peters_isogai_eigenvalue_sweep.py
src/mflco/: __init__.py
src/mflco/aero/: base.py  none.py  peters_finite.py  quasi_steady.py
src/mflco/model/: analysis.py  eom.py  michigan_params.py  params.py  solver.py
tests/: test_analysis.py  test_eom_solver.py  test_linearized_eigenvalues.py  test_michigan_params.py  test_params.py  test_peters_finite.py  test_peters_timemarch.py  test_quasi_steady.py
